istio-secure-demo/istio-configs/ingress/allow-to-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingress
  action: ALLOW
  rules:
  - {}
