istio-secure-demo/istio-configs/ingress/ingress-jwt-authz.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.21/security/tools/jwt/samples/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-without-jwt
 namespace: istio-ingress
spec:
 selector:
   matchLabels:
     app: istio-ingress
 action: DENY
 rules:
 - from:
   - source:
       notRequestPrincipals: ["*"]
